--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
